auth branch initial commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Ingenious</title>
+    <h1>Hi, this is working!</h1>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
