rendered login and signup forms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ingenious</title>
-    <h1>Hi, this is from application.html.erb </h1>
+    <title>Ingenious | Song Lyrics & Knowledge</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
