additional css w joint session form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+
+ .ingenious-app {
+    background-color: black;
+ }
+
+ .ingenious-header {
+    text-align: center;
+ }
+
+.ingenious-navbar {
+    text-align: center;
+}
