logout button pink effect

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,15 +14,7 @@
  *= require_self
  */
 
-
-
-a {
-    text-decoration: none;
+body {
+    margin: 0;
+    
 }
-
-
-
-.body {
-    border: 0;
-}
-
