header logo font styling

--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -21,10 +21,12 @@
 
 .ingenious-header {
     position: absolute;
-    top: 11px;
+    top: 5px;
     text-decoration: none;
-    padding-left: 225px;
-    color: black;
+    padding-left: 220px;
+    color: rgb(253, 255, 111);
+    text-shadow: -1px 2px 2px black;
+    font-size: 19px;
 }
 
 .session-btns {
