track controller views and basic seed data added

--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -35,8 +35,9 @@
     text-decoration: none;
     padding-left: 175px;
     color: rgb(253, 255, 111);
-    text-shadow: -2px 2px 0px black, -1.5px 1.5px 0px black, -1px 1px 0px black;
+    text-shadow: -2px 2px 0px black, -1.5px 1.5px 0px black;
     font-size: 20px;
+    font-weight: 900;
     letter-spacing: -3px;
 }
 
