--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -16,8 +16,8 @@
     color: rgb(0, 0, 0);
     text-align: center;
     font-size: 80px;
-    font-family: Geneva, sans-serif;
-    font-weight: 900;
+    font-family: 'Muli', sans-serif;
+    font-weight: 800;
 }
 
 .tracks-index-subhead {
@@ -26,20 +26,20 @@
     color: rgb(235, 46, 102);
     text-align: center;
     font-size: 14px;
-    font-family: Geneva, sans-serif;
-    font-weight: 900;
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
 }
 
 .fire-icon {
     color: rgb(235, 46, 102);
     font-size: 14px;
-    font-family: Geneva, sans-serif;
+    font-family: 'Muli', sans-serif;
     text-align: center;
 }
 
 .views-icon {
     color: black;
     font-size: 14px;
-    font-family: Geneva, sans-serif;
+    font-family: 'Muli', sans-serif;
     text-align: center;
 }
