--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -29,21 +29,24 @@
 }
 
 .ingenious-header {
+    font-family: 'Mitr', sans-serif;
     position: absolute;
-    top: 6px;
+    // top: 1px;
     text-decoration: none;
     padding-left: 175px;
     color: rgb(253, 255, 111);
-    text-shadow: -2px 2px 0px black, -1.5px 1.5px 0px black;
-    font-size: 20px;
-    font-weight: 900;
-    letter-spacing: -3px;
+    text-shadow: -2px 2px 0px black, -1.5px 1.5px 0px black, -1px 1px 0px black;
+    font-size: 24px;
+
+    // font-weight: 900;
+    letter-spacing: -2px;
 }
 
 .session-btns {
     position: relative;
     top: 7px;
-    width: 10%;
+    padding-left: 60px;
+    // width: 10%;
 }
 
 .session-btn {
@@ -74,13 +77,15 @@
     width: 36%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 11px;
+    padding-top: 10px;
 }
 
 .nav-bar-item {
     font-family: 'Muli', sans-serif;
+    font-weight: 700;
     font-size: small;
     color: white;
+    letter-spacing: 1px;
 }
 
 .nav-bar-item:hover {
@@ -99,9 +104,10 @@
     font-size: 11px;
     font-family: 'Muli', sans-serif;
     font-weight: 700;
-    width: 100px;
+    width: auto;
     position: relative;
-    top: 10px;
+    top: 8px;
+    padding-left: 90px;
 }
 
 .logout-header-btn::before {
@@ -111,12 +117,12 @@
     background-color: rgb(254, 0, 98);
     position: absolute;
     top: 16px;
-    left: -5px;
-    width: 0%;
+    right: -3px;
+    // width: 0%;
 }
 
 .logout-header-btn:hover::before {
-    width: 65%;
+    width: 40%;
 }
 
 .fa-icon {
