basic footer implemented

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -43,3 +43,8 @@
     font-family: 'Muli', sans-serif;
     text-align: center;
 }
+
+.tracks-index-ul {
+    // list-style-type: none;    
+    // padding-left:0;
+}
