--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -69,7 +69,7 @@
     align-items: center;
 }
 
-.nav-bar-list { 
+.nav-bar-list-ul { 
     display: flex;
     list-style-type: none;
     justify-content: space-around;
@@ -78,6 +78,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 10px;
+    padding-left: 0;
 }
 
 .nav-bar-item {
@@ -128,3 +129,36 @@
 .fa-icon {
     font-size: 19px;
 }
+
+.footer-container {
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    color: white;
+    padding-left: 365px;
+    padding-right: 365px;
+}
+
+.footer-tagline {
+    font-size: 36px;
+    font-weight: 400;
+    width: 30%;
+}
+
+.footer-list-ul {
+    list-style-type: none;    
+    padding-left:0;
+    height: 100%;
+    width: 100%;
+}
+.footer-list-li {
+    height: auto;
+    width: auto; 
+}
+
+.footer-icon {
+    color: white;
+    font-size: 30px;
+}
+
+
