track index rendering tracks! + list css

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -34,17 +34,17 @@
     color: rgb(235, 46, 102);
     font-size: 14px;
     font-family: 'Muli', sans-serif;
-    text-align: center;
+
 }
 
 .views-icon {
     color: black;
     font-size: 14px;
     font-family: 'Muli', sans-serif;
-    text-align: center;
+
 }
 
-.tracks-index-ul {
+.tracks-index-ol {
     // list-style-type: none;    
     // padding-left:0;
 }
