--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -132,11 +132,12 @@
 
 .footer-container {
     background-color: black;
-    height: 100%;
+    height: 600px;
     width: 100%;
     color: white;
     padding-left: 365px;
     padding-right: 365px;
+    padding-top: 75px;  
 }
 
 .footer-tagline {
@@ -148,7 +149,8 @@
 .footer-list-ul {
     list-style-type: none;    
     padding-left:0;
-    height: 100%;
+    padding-top: 20px;
+    height: auto;
     width: 100%;
 }
 .footer-list-li {
