--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100%;
     padding-top: 50px;
+    text-align: center;
 }
 
 .tracks-index-header {
@@ -47,4 +48,13 @@
 .tracks-index-ol {
     // list-style-type: none;    
     // padding-left:0;
+    width: 55%;
+    display: inline-block;
+  
+}
+
+.tracks-index-li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
 }
