--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -50,11 +50,39 @@
     // padding-left:0;
     width: 55%;
     display: inline-block;
-  
 }
 
 .tracks-index-li {
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
+    border-bottom: 1px solid rgb(233, 233, 233);
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.tracks-index-li:hover {
+    background-color: rgb(233, 233, 233);   
+}
+
+.chart-num {
+    font-size: 24px;    
+}
+
+.chart-title {
+    font-size: 24px;
+    font-weight: 700;  
+}
+
+.chart-lyr {
+    color: rgb(154, 154, 154); 
+    font-size: 12px;  
+}
+
+.chart-img {
+    
+}
+
+.chart-artist {
+    font-size: 24px;  
 }
