--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -48,8 +48,9 @@
 .tracks-index-ol {
     // list-style-type: none;    
     // padding-left:0;
-    width: 55%;
+    width: 60%;
     display: inline-block;
+    padding-left: 0;
 }
 
 .tracks-index-li {
@@ -59,6 +60,7 @@
     border-bottom: 1px solid rgb(233, 233, 233);
     margin-bottom: 10px;
     margin-top: 10px;
+    // align-content: center;
 }
 
 .tracks-index-li:hover {
@@ -66,6 +68,7 @@
 }
 
 .chart-num {
+    padding-left: 10px;
     font-size: 24px;    
 }
 
@@ -77,6 +80,7 @@
 .chart-lyr {
     color: rgb(154, 154, 154); 
     font-size: 12px;  
+    font-weight: 600;
 }
 
 .chart-img {
