tracks show pages rendering w/id wildcards

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -9,6 +9,7 @@
     height: 100%;
     padding-top: 50px;
     text-align: center;
+  
 }
 
 .tracks-index-header {
@@ -31,26 +32,15 @@
     font-weight: 700;
 }
 
-.fire-icon {
-    color: rgb(235, 46, 102);
-    font-size: 14px;
-    font-family: 'Muli', sans-serif;
-
-}
-
-.views-icon {
-    color: black;
-    font-size: 14px;
-    font-family: 'Muli', sans-serif;
-
-}
 
 .tracks-index-ol {
     // list-style-type: none;    
     // padding-left:0;
     width: 60%;
-    display: inline-block;
+    display: inline-grid;
     padding-left: 0;
+    justify-items: start;
+    // align-content: center;
 }
 
 .tracks-index-li {
@@ -58,35 +48,71 @@
     flex-direction: row;
     justify-content: space-between; 
     border-bottom: 1px solid rgb(233, 233, 233);
-    margin-bottom: 10px;
-    margin-top: 10px;
+    text-align: left;
+    width: 100%;
+    height: 100%;
     // align-content: center;
+    line-height: 77px;
 }
 
 .tracks-index-li:hover {
-    background-color: rgb(233, 233, 233);   
+    background-color: rgb(233, 233, 233); 
+    height: 100%;
+    width: 100%;
 }
 
 .chart-num {
     padding-left: 10px;
     font-size: 24px;    
+    // padding-right: 40px;
+    width: 40px;
+}
+
+.chart-img {
+    // padding-right: 40px;
+    width: 60px;
 }
 
 .chart-title {
     font-size: 24px;
     font-weight: 700;  
+    width: 310px;
+    color: black;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .chart-lyr {
     color: rgb(154, 154, 154); 
     font-size: 12px;  
     font-weight: 600;
+    // padding-right: 40px;
 }
 
-.chart-img {
-    
-}
 
 .chart-artist {
     font-size: 24px;  
+    // padding-right: 40px;
+    width: 250px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+
+.fire-icon {
+    color: rgb(235, 46, 102);
+    font-size: 14px;
+    font-family: 'Muli', sans-serif;
+    // padding-right: 40px;
+    width: 50px;
+}
+
+.views-icon {
+    color: black;
+    font-size: 14px;
+    font-family: 'Muli', sans-serif;
+    // padding-right: 40px;
+    width: 70px;
 }
