--- a/app/assets/stylesheets/tracks-index.scss
+++ b/app/assets/stylesheets/tracks-index.scss
@@ -2,10 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-div {
-    white-space: pre-wrap;
-}
-
 .tracks-index-container {
     background-color: white;
     width: 100%;
@@ -33,8 +29,8 @@ div {
     font-size: 14px;
     font-family: 'Muli', sans-serif;
     font-weight: 700;
+    
 }
-
 
 .tracks-index-ol {
     // list-style-type: none;    
@@ -50,7 +46,7 @@ div {
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    border-bottom: 1px solid rgb(233, 233, 233);
+    border-bottom: 2px solid rgb(233, 233, 233);
     text-align: left;
     width: 100%;
     height: 100%;
@@ -69,11 +65,13 @@ div {
     font-size: 24px;    
     // padding-right: 40px;
     width: 40px;
+    color: black;
 }
 
 .chart-img {
     // padding-right: 40px;
     width: 60px;
+    color: black;
 }
 
 .chart-title {
@@ -101,6 +99,7 @@ div {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    color: black;
 }
 
 
