--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -13,7 +13,8 @@
 .tracks-show-outer-hed-container {
     width: 100%;
     height: 280px;
-    background-color: rgb(192, 93, 167);
+    // background-color: rgb(192, 93, 167);
+    background-image: url("https://images.unsplash.com/photo-1524351543168-8e38787614e9");
 }
 
 .tracks-show-hed-container {
