updated index padding css and basic annotations backend setup

--- a/app/assets/stylesheets/tracks-index.scss
+++ b/app/assets/stylesheets/tracks-index.scss
@@ -53,7 +53,7 @@
     text-align: left;
     width: 100%;
     height: 100%;
-    line-height: 77px;
+    line-height: 40px;
 }
 
 .tracks-index-li:hover {
@@ -63,6 +63,7 @@
 }
 
 .chart-num {
+    padding-top: 29px;
     padding-left: 10px;
     font-size: 24px;    
     // padding-right: 40px;
@@ -71,12 +72,14 @@
 }
 
 .chart-img {
-    padding-right: 40px;
+    padding-top: 20px;
+    // padding-right: 30px;
     width: 60px;
     color: black;
 }
 
 .chart-title {
+    padding-top: 29px;
     font-size: 24px;
     font-weight: 700;  
     width: 310px;
@@ -95,6 +98,7 @@
 
 
 .chart-artist {
+    padding-top: 29px;
     font-size: 24px;  
     // padding-right: 40px;
     width: 250px;
@@ -106,6 +110,7 @@
 
 
 .fire-icon {
+    padding-top: 30px;
     color: rgb(235, 46, 102);
     font-size: 14px;
     font-family: 'Muli', sans-serif;
@@ -114,6 +119,7 @@
 }
 
 .views-icon {
+    padding-top: 30px;
     color: black;
     font-size: 14px;
     font-family: 'Muli', sans-serif;
