footer disclaimer update

--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -164,4 +164,17 @@
     font-size: 30px;
 }
 
+.footer-byline {
+    text-decoration: none;
+    padding-top: 200px;
+    font-size: 14px;
+    font-weight: 400;
+    color: white;
+}
+
+.footer-disclaimer {
+    padding-top: 3px;
+    font-size: 12px;
+    font-weight: 400;
+}
 
