--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -164,17 +164,25 @@
     font-size: 30px;
 }
 
-.footer-byline {
+.footer-gen {
     text-decoration: none;
     padding-top: 200px;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 400;
+    color: white;    
+}
+
+.footer-byline {
+    text-decoration: none;
+
+    font-size: 12px;
     font-weight: 400;
     color: white;
 }
 
 .footer-disclaimer {
-    padding-top: 3px;
-    font-size: 12px;
+    padding-top: 10px;
+    font-size: 11px;
     font-weight: 400;
 }
 
