--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -28,12 +28,14 @@
 .tracks-show-hed-img-container {
     width: 90%;
     display: inline-block; 
-    padding-top: 25px;
+    padding-top: 32px;
+    padding-right: 120px;
 }
 
 .tracks-show-img {
     width: 225px;
     height: 225px;
+    border: 2px solid rgb(154, 154, 154);
     float:left;
 }
 
@@ -86,6 +88,7 @@
     // text-align: center;
     margin: 0 auto;
     padding-bottom: 50px;
+    display: flex;
 }
 
 .tracks-show-mini-title {
@@ -96,13 +99,24 @@
     padding-top: 15px;
     padding-left: 15px;
     text-align: left;
+    position: absolute;
 
 }
 
 .tracks-show-lyrics {
-    display: inline-block; 
+    // display: inline-block; 
+    padding-top: 15px;
+    padding-left: 15px;
     font-size: 18px;
     text-align: left;
     white-space: pre-wrap;
     width: 67%;
+    line-height: 30px;
+}
+
+.tracks-show-anno-comp {
+    width: 32%;
+    height: 100%;
+    text-align: right;
+    // display: inline-block; 
 }
