annotation dropdown on click implemented

--- a/app/assets/stylesheets/tracks-index.scss
+++ b/app/assets/stylesheets/tracks-index.scss
@@ -93,7 +93,8 @@
     color: rgb(154, 154, 154); 
     font-size: 12px;  
     font-weight: 600;
-    // padding-right: 40px;
+    // height: 100%;
+    // padding-bottom: 5px;
 }
 
 
