--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -3,3 +3,24 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.anno-button {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    color: rgb(0, 0, 0);
+    background-color: rgb(253, 255, 111);
+    border: 1px solid rgb(253, 255, 111);
+    width: 180px;
+    height: 35px;;
+    border-radius: 2px;
+    font-family: 'Muli', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.annotation-box {
+    background-color: pink;
+    height: 200px;
+    width: 300px;
+    color: black;
+}
