--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -134,7 +134,7 @@
 .footer-container {
     background-color: black;
     height: 600px;
-    width: 100%;
+    width: auto;
     color: white;
     padding-left: 365px;
     padding-right: 365px;
@@ -144,7 +144,7 @@
 .footer-tagline {
     font-size: 36px;
     font-weight: 400;
-    width: 30%;
+    width: 50%;
 }
 
 .footer-list-ul {
