--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -22,21 +22,23 @@
     width: 50%;
     height: 100%;
     display: inline-block; 
-    text-align: center;
+    // text-align: center;
 }
 
 .tracks-show-hed-img-container {
     width: 90%;
-    display: inline-block; 
+    // display: inline-block; 
     padding-top: 32px;
     padding-right: 120px;
+    // left: -50px;
 }
 
 .tracks-show-img {
     width: 225px;
     height: 225px;
     border: 2px solid rgb(154, 154, 154);
-    float:left;
+    float: left;
+    // left: -20px;
 }
 
 .tracks-show-hed-words-container {
