lyrics rendering on show pages again

--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -27,10 +27,11 @@
 
 .tracks-show-hed-img-container {
     width: 90%;
-    // display: inline-block; 
     padding-top: 32px;
     padding-right: 120px;
-    // left: -50px;
+    left: -20px;
+    // display: inline-block; 
+    position: relative;
 }
 
 .tracks-show-img {
