--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -3,25 +3,57 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.anno-button {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    color: rgb(0, 0, 0);
-    background-color: rgb(253, 255, 111);
-    border: 1px solid rgb(253, 255, 111);
-    width: 180px;
-    height: 35px;;
-    border-radius: 2px;
-    font-family: 'Muli', sans-serif;
+.anno-show-lyrics-container {
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    // text-align: center;
+    margin: 0 auto;
+    padding-bottom: 50px;
+    display: flex;
 
-    outline-width: 0;
 }
+
+.anno-show-mini-title {
+    color: rgb(154, 154, 154);
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-top: 15px;
+    padding-left: 15px;
+    text-align: left;
+    position: absolute;
+}
+
+.anno-show-lyrics {
+    // display: inline-block; 
+    padding-top: 15px;
+    padding-left: 15px;
+    font-size: 18px;
+    text-align: left;
+    white-space: pre-wrap;
+    width: 67%;
+    line-height: 30px;
+    background: transparent;
+    position: relative;
+    z-index: 0;
+}
+
+.anno-show-cont {
+    width: 32%;
+    height: 100%;
+    text-align: right;
+    padding-right: 70px;
+    // display: inline-block; 
+}
+
 
 
 .annotation-box-container {
-
+    width: 100%;
+    height: 100%;
 }
+
 
 .annotation-hed {
     font-weight: 600;
@@ -29,9 +61,9 @@
 }
 
 .annotation-box {
-    background-color: pink;
+    background-color: white;
     height: auto;
-    width: 300px;
+    width: 100%;
     color: black;
     border-left: 4px solid rgb(134, 146, 230);
     text-align: justify;
@@ -40,5 +72,36 @@
     font-size: 15px;
     padding-top: 2px;
     padding-bottom: 2px;
+}
+
+.anno-button {
+    display: block;
+    // color: rgb(0, 0, 0);
+    background-color: rgba(213, 213, 213, .5);
+    width: 395px;
+    height: 31px;;
+    position: absolute;
+    font-family: 'Muli', sans-serif;
+    margin-top: 164px;
+    margin-left: 102px;   
+    // background: transparent;
+    // border: none !important;
+    // font-size:0;
 
 }
+
+.anno-button:hover {
+    background-color: rgba(253, 255, 111, .5);
+}
+
+// .anno-button-highlight {
+//     display: block;
+//     background-color: rgba(213, 213, 213, 1);
+//     width: 395px;
+//     height: 31px;;
+//     position: absolute;
+//     margin-top: 164px;
+//     margin-left: 102px;   
+//     // z-index: -1;
+// }
+
