pre-heroku deploy css tweaks

--- a/app/assets/stylesheets/tracks-index.scss
+++ b/app/assets/stylesheets/tracks-index.scss
@@ -8,7 +8,7 @@
     height: 100%;
     padding-top: 50px;
     text-align: center;
-  
+    padding-bottom: 70px;
 }
 
 .tracks-index-header {
@@ -64,7 +64,7 @@
 }
 
 .chart-num {
-    padding-top: 28px;
+    padding-top: 27px;
     padding-left: 20px;
     font-size: 24px;   
 
@@ -74,14 +74,14 @@
 }
 
 .chart-img {
-    padding-top: 14px;
+    padding-top: 13px;
     // padding-right: 30px;
     width: 60px;
     color: black;
 }
 
 .chart-title {
-    padding-top: 28px;
+    padding-top: 27px;
     font-size: 24px;
     font-weight: 700;  
     width: 310px;
@@ -101,7 +101,7 @@
 
 
 .chart-artist {
-    padding-top: 28px;
+    padding-top: 27px;
     font-size: 24px;  
     // padding-right: 40px;
     width: 250px;
