--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         window.macMillerPrograms = '<%= image_url('mac-miller-programs.jpg') %>'
         window.backgroundHeader = '<%= image_url('armand-khoury-4cBVro7SHLs-unsplash.jpg') %>'
     </script>
-
+    <%= favicon_link_tag asset_path('ingenious-favicon.png') %>
 
   </head>
 
