--- a/app/assets/stylesheets/tracks-index.scss
+++ b/app/assets/stylesheets/tracks-index.scss
@@ -5,10 +5,10 @@
 .tracks-index-container {
     background-color: white;
     width: 100%;
-    height: 100%;
+    height: auto;
     padding-top: 50px;
     text-align: center;
-    padding-bottom: 70px;
+    padding-bottom: 25px;
 }
 
 .tracks-index-header {
@@ -32,7 +32,6 @@
     padding-top: 10px;
     padding-bottom: 40px;
 }
-
 
 
 .tracks-index-ol {
@@ -128,4 +127,32 @@
     font-family: 'Muli', sans-serif;
     padding-right: 20px;
     width: 70px;
+}
+
+.load-more-button-container {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    padding-bottom: 50px;
+}
+
+.load-more-button {
+    border: 2px solid black;
+    background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.load-more-button:hover {
+    background-color: black;
+    color: white;
+}
+
+.load-more-button:focus {
+    outline-width: 0;
 }
