createAnno passed as prop

--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -163,3 +163,11 @@
 .anno-submit-button:focus {
      outline-width: 0;
 }
+
+.highlight {
+    background-color: #e06f6f;
+}
+
+.custom-class {
+    background-color: #e06f6f;    
+}
