--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -14,7 +14,9 @@
     width: 100%;
     height: 280px;
     // background-color: rgb(192, 93, 167);
-    background-image: url("https://images.unsplash.com/photo-1524351543168-8e38787614e9");
+    // background-image: url("https://images.unsplash.com/photo-1524351543168-8e38787614e9");
+    background-image: url("./armand-khoury-4cBVro7SHLs-unsplash.jpg");
+    
 }
 
 .tracks-show-hed-container {
