--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,84 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.comments-list-cont {
+  display: block;
+  
+}
+
+.comments-list {
+  width: 52%;
+  padding-left: 260px;
+}
+
+.comments-list-ul {
+    list-style: none;
+    
+}
+
+.comments-item-li {
+  text-align: left;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top: solid 1px rgb(134, 146, 230);
+
+}
+
+.comments-author {
+  padding-bottom: 15px;
+  font-weight: 600;
+}
+
+.comments-body {
+
+}
+
+
+
+
+
+.comments-form-cont {
+      display: block;
+      padding-top: 20px;
+}
+
+.comment-form {
+        width: 100%;
+    height: 100%;
+}
+
+.comment-textarea {
+    font-family: 'Muli', sans-serif;
+    border: 0;
+    border: 2px solid rgb(213, 213, 213);
+    background-color: white;
+    color: rgb(113, 113, 113);
+    resize: none;
+    width: 507px;
+    height: 50px;
+    font-size: 16px;
+    padding: 10px;
+}
+
+.comment-textarea:focus {
+    outline-width: 0;
+    box-shadow: inset 0 0 6px rgba(134, 146, 230, 1);
+
+}
+
+
+.comment-submit-button {
+    border: 3px solid rgb(84, 200, 53);
+    background-color: white;
+    color: rgb(84, 200, 53);
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
