comment item usernames and delete button implemented

--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -159,6 +159,7 @@
     padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
+    cursor: pointer;
 }
 
 .anno-submit-button:focus {
