--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -19,7 +19,7 @@
 .comments-item-li {
   text-align: left;
   padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   padding-left: 5px;
   padding-right: 5px;
   border-top: solid 1px rgb(134, 146, 230);
@@ -97,7 +97,6 @@
     cursor: pointer;
 }
 
-
-
-
-
+.comment-submit-button:focus {
+     outline-width: 0;
+}
