--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -2,19 +2,30 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.comments-outer-cont {
+    width: 60%;
+    height: 100%; 
+    background-color: white;
+    display: inline-block;
+}
+
 // COMMENTS FORM
 .comments-form-cont {
-    display: block;
+    text-align: center;
+    width: 93%;
     padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgb(247, 247, 247);
+    display: inline-block;
 }
 
 .comment-form {
-    width: 100%;
-    height: 100%;
+    text-align: left;
+    padding-left: 20px;
 }
 
 .comment-textarea {
-    width: 30%;
+    width: 60%;
     font-family: 'Muli', sans-serif;
     border: 0;
     border: 2px solid rgb(213, 213, 213);
@@ -23,6 +34,7 @@
     height: 20px;
     font-size: 16px;
     padding: 10px;
+    margin-bottom: 10px;
     // resize: none;
 }
 
@@ -54,13 +66,17 @@
 .comments-list-cont {
     text-align: center;
     width: 100%;
+    padding-bottom: 20px;
+    
 }
 
 .comments-list {
     display: inline-block;
-    width: 50%;
+    width: 90%;
     height: 100%;
-
+    background-color: rgb(247, 247, 247);
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .comments-list-ul {
