--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Ingenious | Song Lyrics & Knowledge</title>
+    
+    <meta property='og:title' content='Ingenious'/>
+    <meta property='og:image' content='https://ingenious-prod.s3.amazonaws.com/portfolio-images/ingenious-linkedin.png' />
+    <meta property='og:description' content='A Genius.com clone project.'/>
+    <meta property='og:url' content='https://ingenious-app.herokuapp.com/#/'/>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
