--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -67,6 +67,31 @@
     font-size: 11px;
 }
 
+.annotation-del-button-cont {
+    height: auto;
+}
+
+.annotation-del-button {
+    border: none;
+    background-color: transparent;
+    color: rgb(113, 113, 113);
+    cursor: pointer;
+    padding-top: 25px;
+}
+
+.annotation-del-button:focus {
+     outline-width: 0;
+}
+
+.annotation-del-button-text {
+    font-size: 12px;
+    padding-left: 5px;
+    padding-top: 25px;
+}
+.annotation-del-button-text:focus {
+
+}
+
 
 .annotation-box {
     background-color: white;
@@ -123,7 +148,6 @@
     height: 100%;
     display: flex;
     justify-content: flex-end;
-    
 }
 
 .anno-border-bar {
@@ -135,7 +159,6 @@
 .anno-form {
     width: 100%;
     height: 100%;
-    
 }
 
 .anno-textarea {
@@ -155,7 +178,6 @@
 .anno-textarea:focus {
     outline-width: 0;
     box-shadow: inset 0 0 6px rgba(134, 146, 230, 1);
-
 }
 
 .anno-submit-button {
