--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -44,17 +44,33 @@
     height: 100%;
     text-align: right;
     padding-right: 70px;
-    // display: inline-block; 
 }
 
 .annotation-box-container {
     width: 100%;
     height: 100%;
+    position: relative; //attempting viewport offset thing—this is the parent container
+}
+.annotation-box {
+    background-color: white;
+    height: auto;
+    width: 100%;
+    color: black;
+    border-left: 4px solid rgb(134, 146, 230);
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 15px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    //position: absolute; //attempting viewport offset thing—this is the child element
+    //top: 500px; //lowers child ele this much
 }
 
 .annotation-hed {
     font-weight: 600;
     font-size: 14px;
+    padding-bottom: 20px;
 }
 
 .annotation-byline {
@@ -93,19 +109,7 @@
 }
 
 
-.annotation-box {
-    background-color: white;
-    height: auto;
-    width: 100%;
-    color: black;
-    border-left: 4px solid rgb(134, 146, 230);
-    text-align: justify;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 15px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-}
+
 
 .anno-button {
     display: block;
