--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -44,17 +44,19 @@
     height: 100%;
     text-align: right;
     padding-right: 70px;
+    position: sticky; //added sticky scrolling
+    top: 50px;
 }
 
 .annotation-box-container {
     width: 100%;
     height: 100%;
-    position: relative; //attempting viewport offset thing—this is the parent container
+    // position: relative; //attempting viewport offset thing—this is the parent container
 }
 .annotation-box {
     background-color: white;
     height: auto;
-    width: 100%;
+    // width: 100%;
     color: black;
     border-left: 4px solid rgb(134, 146, 230);
     text-align: justify;
@@ -63,6 +65,7 @@
     font-size: 15px;
     padding-top: 2px;
     padding-bottom: 2px;
+    // position: relative;
     //position: absolute; //attempting viewport offset thing—this is the child element
     //top: 500px; //lowers child ele this much
 }
