--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -106,6 +106,7 @@
     font-size: 12px;
     padding-left: 5px;
     padding-top: 25px;
+    color: rgb(73, 73, 73);
 }
 .annotation-del-button-text:focus {
 
