--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -119,7 +119,12 @@
      outline-width: 0;
 }
 
-
+.comments-del-button-text {
+    font-size: 12px;
+    padding-left: 5px;
+    padding-top: 25px;
+    color: rgb(73, 73, 73);
+}
 
 
 
