--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -206,6 +206,53 @@
      outline-width: 0;
 }
 
+//log in to annotate version
+
+.anno-login-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.anno-login-border-bar {
+    border-left: 4px solid rgb(134, 146, 230);
+    height: auto;
+    padding-right:8px;
+}
+
+.anno-login-card {
+    width: 100%;
+    height: 100%;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(155, 155, 155);
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: rgb(143, 143, 143);
+    font-weight: 600;
+    
+    a:link {
+    color: rgba(134, 146, 230, 1);
+    }
+    a:visited {
+    color: rgba(134, 146, 230, 1);
+    }
+    a:hover {
+    color: rgba(134, 145, 230, 0.7);
+    }
+    a:active {
+    color: rgba(134, 145, 230, 0.7);
+    }
+}
+
+
+
+
+
 .highlight {
     background-color: #e06f6f;
 }
