readme gif and og update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,16 @@
   <head>
     <title>Ingenious | Song Lyrics & Knowledge</title>
     
+    <meta name="description" content="A Genius.com clone project, Ingenious is the world’s biggest collection of code-related song lyrics and programming music knowledge." />
+	<meta name="keywords" content="ingenious, ingenious.com, mari kasanuki, marikasanuki, genius.com, software engineer, software developer, react project, fullstack" />
+	<meta name="author" content="Mari Kasanuki" />
+
     <meta property='og:title' content='Ingenious'/>
     <meta property='og:image' content='https://ingenious-prod.s3.amazonaws.com/portfolio-images/ingenious-linkedin.png' />
-    <meta property='og:description' content='A Genius.com clone project.'/>
-    <meta property='og:url' content='https://ingenious-app.herokuapp.com/#/'/>
+    <meta property='og:description' content='A Genius.com clone project, Ingenious is the world’s biggest collection of code-related song lyrics and programming music knowledge.'/>
+    <meta property='og:url' content='https://ingenious-app.herokuapp.com/'/>
+    <meta property="og:site_name" content="Mari Kasanuki"/>
+    <meta property="og:type" content="website" />
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
