--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -206,6 +206,64 @@
      outline-width: 0;
 }
 
+
+//annotation form EDIT version
+
+.anno-form-container-edit {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.anno-border-bar-edit {
+    border-left: 4px solid rgb(134, 146, 230);
+    height: auto;
+    padding-right:8px;
+}
+
+.anno-form-edit {
+    width: 100%;
+    height: 100%;
+}
+
+.anno-textarea-edit {
+    font-family: 'Muli', sans-serif;
+    border: 0;
+    // border: .5px solid rgba(134, 146, 230, 1);
+    background-color: rgb(245, 245, 245);
+    color: rgb(54, 54, 54);
+    resize: none;
+    width: 100%;
+    height: 200px;
+    font-size: 16px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.anno-textarea-edit:focus {
+    outline-width: 0;
+    box-shadow: inset 0 0 6px rgba(134, 146, 230, 1);
+}
+
+.anno-submit-button-edit {
+    border: 3px solid rgb(84, 200, 53);
+    background-color: white;
+    color: rgb(84, 200, 53);
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.anno-submit-button-edit:focus {
+     outline-width: 0;
+}
+
 //log in to annotate version
 
 .anno-login-container {
