--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -4,15 +4,16 @@
 }
 
 .main-header-container {
+    display: block;
     width: 100%;
-    height: 25px;
+    height: 40px;
 }
 
 .main-header {
+    display: flex;
     background-color: rgb(253, 255, 111);
     color: rgb(0, 0, 0);
     font-family: Geneva, sans-serif;
-    display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
@@ -23,7 +24,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 10px;
     width: 90%;
     height: 100%;
 }
@@ -31,22 +31,18 @@
 .ingenious-header {
     font-family: 'Mitr', sans-serif;
     position: absolute;
-    // top: 1px;
     text-decoration: none;
     padding-left: 175px;
     color: rgb(253, 255, 111);
     text-shadow: -2px 2px 0px black, -1.5px 1.5px 0px black, -1px 1px 0px black;
     font-size: 24px;
-
-    // font-weight: 900;
-    letter-spacing: -2px;
+    letter-spacing: 7px;
+    margin-bottom: 3px;
 }
 
 .session-btns {
     position: relative;
-    top: 7px;
     padding-left: 60px;
-    // width: 10%;
 }
 
 .session-btn {
@@ -67,6 +63,7 @@
     text-align: center;
     height: 41px;
     align-items: center;
+    display: flex;
 }
 
 .nav-bar-list-ul { 
@@ -77,7 +74,6 @@
     width: 36%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 10px;
     padding-left: 0;
 }
 
@@ -93,11 +89,31 @@
     color: rgb(253, 255, 111);
 }
 
-// .header-nav {
-//     display: flex;
-//     justify-content: flex-end;
-//     align-items: center;
-// }
+.nav-bar-item-pipe {
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+    font-size: small;
+    color: white;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-bottom: 2px;
+}
+
+.nav-bar-icons-li {
+    display: flex;
+}
+
+.nav-bar-item-icon {
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+    font-size: small;
+    color: white;
+    padding-right: 25px;
+}
+
+.nav-bar-item-icon:hover {
+    color: rgb(253, 255, 111);
+}
 
 .username-header {
     text-decoration: none;
@@ -106,7 +122,6 @@
     font-family: 'Muli', sans-serif;
     width: auto;
     position: relative;
-    top: 8px;
 }
 
 .logout-header-btn {
@@ -117,8 +132,8 @@
     font-weight: 700;
     width: auto;
     position: relative;
-    top: 8px;
     padding-left: 15px;
+    padding-right: 15px;
 }
 
 .logout-header-btn::before {
@@ -127,13 +142,12 @@
     height: 6px;
     background-color: rgb(254, 0, 98);
     position: absolute;
-    top: 16px;
-    right: -3px;
-    // width: 0%;
+    top: 15px;
+    right: 9px;
 }
 
 .logout-header-btn:hover::before {
-    width: 84%;
+    width: 75%;
 }
 
 .fa-icon {
