debugger function cleaup

--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -187,6 +187,18 @@
     font-size: 30px;
 }
 
+// .footer-li-a {
+//     font-family: 'Muli', sans-serif;
+//     font-weight: 700;
+//     font-size: small;
+//     color: white;
+//     letter-spacing: 1px;
+// }
+
+// .footer-li-a:hover {
+//     color: rgb(253, 255, 111);
+// }
+
 .footer-gen {
     text-decoration: none;
     padding-top: 200px;
