--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -11,7 +11,7 @@
 .tracks-show-outer-hed-container {
     width: 100%;
     height: 280px;
-    background-image: url("./armand-khoury-4cBVro7SHLs-unsplash.jpg");
+    background-image: url("https://github.com/marikasanuki/Ingenious/blob/master/app/assets/images/armand-khoury-4cBVro7SHLs-unsplash.jpg");
 }
 
 .tracks-show-hed-container {
